--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -268,6 +268,10 @@ entries:
                     url: /find-the-city-with-the-smallest-number-of-neighbors-at-a-threshold-distance.html
                     output: web, pdf
 
+                  - title: Minimum Cost to Convert String I (APSP)
+                    url: /minimum-cost-to-convert-string-i.html
+                    output: web, pdf
+
               - title: baekjoon
                 output: web
                 subfolderitems:
