--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -340,15 +340,15 @@ entries:
                 output: web
                 subfolderitems:
                   - title: Day 5
-                    url: /5.html
+                    url: /advent_of_code_2024-day5.html
                     output: web, pdf
 
                   - title: Day 7
-                    url: /7.html
+                    url: /advent_of_code_2024-day7.html
                     output: web, pdf
 
                   - title: Day 8
-                    url: /8.html
+                    url: /advent_of_code_2024-day8.html
                     output: web, pdf
 
       - title: Study
